--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,53 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <div class="navbar-wrapper">
+    <div class="container">
 
-<%= yield %>
+      <div class="navbar navbar-inverse navbar-static-top">
+        <div class="container">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="/">NCCM GRUP</a>
+          </div>
+          <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+              <li class='<%= "active" if @home_page %>'><%= link_to "Acasă", root_path %></li>
+              <li class="dropdown <%= "active" if @about_page %>">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Despre Companie <b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                  <li><%= link_to "Echipă", team_path %></li>
+                  <li><a href="#">Tehincă</a></li>
+                  <li><a href="#">Noutăți</a></li>
+                  <li><%= link_to "Contacte", contact_path %></li>
+<!--                   <li class="divider"></li>
+                  <li class="dropdown-header">Nav header</li>
+                  <li><a href="#">Separated link</a></li>
+                  <li><a href="#">One more separated link</a></li> -->
+                </ul>
+              </li>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Forare Orizontală Dirijată <b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                  <li><a href="#">Tehnologie</a></li>
+                  <li><a href="#">Calculator</a></li>
+                  <li><a href="#">Lucrări Îndeplinite</a></li>
+                </ul>
+              </li>
+              <li><a href="#">Linii de Comunicații cu Fibre Optice</a></li>
+              <li><a href="#">Parteneri</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+  <%= yield %>
 
 </body>
 </html>
