--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -7,7 +7,7 @@
 <!-- Three columns of text below the carousel -->
 <div class="row">
   <div class="page-header">
-    <h3>Ultimele noutăți <!-- <small><#%= link_to "vezi toate", news_path %></small> --></h3>
+    <h3>Ultimele Noutăți <!-- <small><#%= link_to "vezi toate", news_path %></small> --></h3>
   </div>
   <% @posts.each do |post| %>
   <div class="col-lg-4">
