--- a/app/views/welcome/calculator.html.erb
+++ b/app/views/welcome/calculator.html.erb
@@ -1,71 +1,17 @@
-<style type="text/css" media="screen">
-
-</style>
 <div class="page-header">
-  <h3>Calculator <!-- <small><#%= link_to "vezi toate", news_path %></small> --></h3>
+  <h3>Calculator <small></small></h3>
 </div>
 
-<p><h3>Țeavă Metal</h3></p>
-<br><br><br>
-<div id="slider-metal">
-  <div class="metal_diameter_ruler"></div>
-</div>
-<center>Diametru</center>
-<hr>
-<br><br>
-<div id="metal-meters">
-  <div class="metal_meters_ruler"><span>| 20m</span><span style="float: right;">100m |</span></div>
-</div>
-<center>Lungime</center>
-<br><br><br>
-<div class="results">
-  diametru(mm): <input type="text" id="metal_diameter" value="50" disabled="disabled" /><br>
-  lungime(metri): <input type="text" id="metal_meters" value="20" disabled="disabled" /><br>
-  preț/m MDL: <span class="preice_m">770</span><br>
-  ----------------------------<br>
-  total MDL: <input type="text" id="total_for_metalic" value="15400" disabled="disabled" />
+<div class="calc_tabs_header">
+  <h5>
+    <span class="link_to_metalic">Țeavă Metal</span> |
+    <span class="link_to_plastic"><%= link_to 'Țeavă Polietilenă', plastic_calc_path, remote: true %></span>
+  </h5>
 </div>
 
-
-<script type="text/javascript">
-  function updateTotal(){
-    if($("#metal_diameter").val() <= 110) {
-      var meter_value = 770
-    }
-    else if($("#metal_diameter").val() <= 200) {
-      var meter_value = 860
-    }
-    else if($("#metal_diameter").val() > 200) {
-      var meter_value = 1200
-    }
-
-    $('.preice_m').html(meter_value);
-    $('#total_for_metalic').val($('#metal_meters').val() * meter_value);
-    // alert(diam);
-  }
-
-  $(function() {
-    var valMap = [50, 63, 90, 110, 125, 140, 160, 225, 250, 280];
-    $("#slider-metal").slider({
-      min: 0,
-      max: valMap.length - 1,
-      value: 0,
-      slide: function(event, ui) {
-        var diam = $("#metal_diameter").val(valMap[ui.value]);
-        updateTotal(diam);
-      }
-    });
-    $( "#metal-meters" ).slider({
-      min: 20,
-      max: 100,
-      value: 20,
-      slide: function(event, ui) {
-        var diam = $("#metal_meters" ).val(ui.value);
-        updateTotal(diam=false);
-      }
-    });
-  });
-</script>
-
-
-<!-- https://github.com/BlakeSimpson/SteppedRangeSlider -->
+<div class="calc_container">
+  <%= render 'calc_metalic' %>
+</div>
+<div class="price_warning">
+  * - Prețul este pentru 1 metru, inclusiv TVA. Prețul este arătat doar în scopuri informative și poate varia în funcție de domeniul de activitate și de distanța obiectului.
+</div>
