--- a/app/views/welcome/calculator.html.erb
+++ b/app/views/welcome/calculator.html.erb
@@ -1,3 +1,4 @@
+<div class="page_header"><center><%= image_tag 'header.jpg', class: 'img-rounded' %></center></div>
 <div class="page-header">
   <h3>Calculator <small></small></h3>
 </div>
@@ -12,6 +13,12 @@
 <div class="calc_container">
   <%= render 'calc_metalic' %>
 </div>
-<div class="price_warning">
-  * - Prețul este pentru 1 metru, inclusiv TVA. Prețul este arătat doar în scopuri informative și poate varia în funcție de domeniul de activitate și de distanța obiectului.
+<br><br><br>
+<div class="panel panel-warning">
+  <div class="panel-heading">
+    <h3 class="panel-title">Atenție!</h3>
+  </div>
+  <div class="panel-body">
+    Prețul este arătat doar în scopuri informative și poate varia în funcție de domeniul de activitate și de distanța obiectului.
+  </div>
 </div>
