--- a/app/views/welcome/team.html.erb
+++ b/app/views/welcome/team.html.erb
@@ -9,7 +9,7 @@
     <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
   </div>
   <div class="col-md-5">
-    <img class="featurette-image img-responsive" src="<%= asset_path 'profile1.jpg' %>" data-src="holder.js/500x500/auto" alt="Generic placeholder image" style="height: 450px; width: 350px; display: block;">
+    <img class="featurette-image img-responsive img-rounded" src="<%= asset_path 'profile1.jpg' %>" data-src="holder.js/500x500/auto" alt="Generic placeholder image" style="height: 350px; width: 250px; display: block;">
   </div>
 </div>
 
@@ -21,7 +21,7 @@
     <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
   </div>
   <div class="col-md-5">
-    <img class="featurette-image img-responsive" src="<%= asset_path 'profile1.jpg' %>" data-src="holder.js/500x500/auto" alt="Generic placeholder image" style="height: 450px; width: 350px; display: block;">
+    <img class="featurette-image img-responsive img-rounded" src="<%= asset_path 'profile1.jpg' %>" data-src="holder.js/500x500/auto" alt="Generic placeholder image" style="height: 350px; width: 250px; display: block;">
   </div>
 </div>
 
@@ -33,7 +33,7 @@
     <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
   </div>
   <div class="col-md-5">
-    <img class="featurette-image img-responsive" src="<%= asset_path 'profile1.jpg' %>" data-src="holder.js/500x500/auto" alt="Generic placeholder image" style="height: 450px; width: 350px; display: block;">
+    <img class="featurette-image img-responsive img-rounded" src="<%= asset_path 'profile1.jpg' %>" data-src="holder.js/500x500/auto" alt="Generic placeholder image" style="height: 350px; width: 250px; display: block;">
   </div>
 </div>
 
