worked on design issues, refactoring, moving to partials

--- a/app/assets/stylesheets/welcome.css.scss.erb
+++ b/app/assets/stylesheets/welcome.css.scss.erb
@@ -14,17 +14,16 @@
 .metal_meters_ruler{
   margin-top: -25px;
 }
-#metal_diameter, #metal_meters{
+#metal_diameter, #metal_meters, #total_for{
   border: 0px;
   background: transparent;
   font-size: 20px;
+  -webkit-box-shadow: inset 0 0px 0px rgba(0,0,0,0.075);
+  -moz-box-shadow: inset 0 0px 0px rgba(0,0,0,0.075);
+  box-shadow: inset 0 0px 0px rgba(0,0,0,0.075);
+  width: 75px;
 }
 #metal-meters-slider{margin-top: 50px;}
-#total_for_metalic{
-  border: 0px;
-  background: transparent;
-  font-size: 20px;
-}
 .preice_m{
   font-size: 20px;
 }
@@ -34,4 +33,4 @@
 .results{
   margin-top: 40px;
 }
-.link_to_plastic a, .link_to_metalic a{color: #72c02c;}
+.link_to_plastic a, .link_to_metalic a{color: #3498db;}
