--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,44 +15,16 @@
   <link rel="stylesheet" href="assets/plugins/flexslider/flexslider.css" type="text/css" media="screen">
   <link rel="stylesheet" href="assets/plugins/parallax-slider/css/parallax-slider.css" type="text/css">
   <!-- CSS Theme -->
-  <link rel="stylesheet" href="assets/css/themes/default.css" id="style_color">
+  <link rel="stylesheet" href="assets/css/themes/blue.css" id="style_color">
+  <link rel="stylesheet" href="assets/css/themes/headers/header1-blue.css" id="style_color">
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-<!--=== Style Switcher ===-->
-<!-- <i class="style-switcher-btn icon-cogs"></i>
-<div class="style-switcher">
-    <div class="theme-close"><i class="icon-remove"></i></div>
-    <div class="theme-heading">Theme Colors</div>
-    <ul class="unstyled">
-        <li class="theme-default theme-active" data-style="default" data-header="light"></li>
-        <li class="theme-blue" data-style="blue" data-header="light"></li>
-        <li class="theme-orange" data-style="orange" data-header="light"></li>
-        <li class="theme-red" data-style="red" data-header="light"></li>
-        <li class="theme-light" data-style="light" data-header="light"></li>
-    </ul>
-</div> --><!--/style-switcher-->
-<!--=== End Style Switcher ===-->
-
 <!--=== Top ===-->
+<!-- render login menu, language bar -->
 <div class="top">
-<!--     <div class="container">
-        <ul class="loginbar pull-right">
-            <li><i class="icon-globe"></i><a>Languages <i class="icon-sort-up"></i></a>
-                <ul class="nav-list">
-                    <li class="active"><a href="#">English</a> <i class="icon-ok"></i></li>
-                    <li><a href="#">Spanish</a></li>
-                    <li><a href="#">Russian</a></li>
-                    <li><a href="#">German</a></li>
-                </ul>
-            </li>
-            <li class="devider">&nbsp;</li>
-            <li><a href="page_faq.html" class="login-btn">Help</a></li>
-            <li class="devider">&nbsp;</li>
-            <li><a href="page_login.html" class="login-btn">Login</a></li>
-        </ul>
-    </div> -->
+  <%#= render 'layouts/top' %>
 </div><!--/top-->
 <!--=== End Top ===-->
 
@@ -61,86 +33,17 @@
     <div class="container">
         <!-- Logo -->
         <div class="logo">
-            <a href="/"><img id="logo-header" src="assets/img/logo1-default.png" alt="Logo"></a>
-        </div><!-- /logo -->
-
+            <a href="/"><h2><b>NCCM GRUP</b></h2></a>
+        </div>
         <!-- Menu -->
         <%= render 'layouts/navbar' %>
     </div><!-- /container -->
 </div><!--/header -->
 <!--=== End Header ===-->
-
  <%= yield %>
-
 <!--=== Footer ===-->
 <div class="footer">
-  <div class="container">
-    <div class="row-fluid">
-      <div class="span4">
-                <!-- About -->
-            <div class="headline"><h3>About</h3></div>
-        <p class="margin-bottom-25">Unify is an incredibly beautiful responsive Bootstrap Template for corporate and creative professionals.</p>
-
-              <!-- Monthly Newsletter -->
-            <div class="headline"><h3>Monthly Newsletter</h3></div>
-        <p>Subscribe to our newsletter and stay up to date with the latest news and deals!</p>
-        <form class="form-inline">
-          <div class="input-append">
-            <input type="text" placeholder="Email Address" class="input-medium">
-            <button class="btn-u">Subscribe</button>
-          </div>
-        </form>
-      </div><!--/span4-->
-
-      <div class="span4">
-                <div class="posts">
-                    <div class="headline"><h3>Recent Blog Entries</h3></div>
-                    <dl class="dl-horizontal">
-                        <dt><a href="#"><img src="assets/img/sliders/elastislide/6.jpg" alt="" /></a></dt>
-                        <dd>
-                            <p><a href="#">Anim moon officia Unify is an incredibly beautiful responsive Bootstrap Template</a></p>
-                        </dd>
-                    </dl>
-                    <dl class="dl-horizontal">
-                    <dt><a href="#"><img src="assets/img/sliders/elastislide/10.jpg" alt="" /></a></dt>
-                        <dd>
-                            <p><a href="#">Anim moon officia Unify is an incredibly beautiful responsive Bootstrap Template</a></p>
-                        </dd>
-                    </dl>
-                    <dl class="dl-horizontal">
-                    <dt><a href="#"><img src="assets/img/sliders/elastislide/11.jpg" alt="" /></a></dt>
-                        <dd>
-                            <p><a href="#">Anim moon officia Unify is an incredibly beautiful responsive Bootstrap Template</a></p>
-                        </dd>
-                    </dl>
-                </div>
-      </div><!--/span4-->
-
-      <div class="span4">
-              <!-- Monthly Newsletter -->
-            <div class="headline"><h3>Contact Us</h3></div>
-                <address>
-          25, Lorem Lis Street, Orange <br />
-          California, US <br />
-          Phone: 800 123 3456 <br />
-          Fax: 800 123 3456 <br />
-          Email: <a href="mailto:info@anybiz.com" class="">info@anybiz.com</a>
-                </address>
-
-                <!-- Stay Connected -->
-            <div class="headline"><h3>Stay Connected</h3></div>
-                <ul class="social-icons">
-                    <li><a href="#" data-original-title="Feed" class="social_rss"></a></li>
-                    <li><a href="#" data-original-title="Facebook" class="social_facebook"></a></li>
-                    <li><a href="#" data-original-title="Twitter" class="social_twitter"></a></li>
-                    <li><a href="#" data-original-title="Goole Plus" class="social_googleplus"></a></li>
-                    <li><a href="#" data-original-title="Pinterest" class="social_pintrest"></a></li>
-                    <li><a href="#" data-original-title="Linkedin" class="social_linkedin"></a></li>
-                    <li><a href="#" data-original-title="Vimeo" class="social_vimeo"></a></li>
-                </ul>
-      </div><!--/span4-->
-    </div><!--/row-fluid-->
-  </div><!--/container-->
+<%= render 'layouts/footer' %>
 </div><!--/footer-->
 <!--=== End Footer ===-->
 
