--- a/app/views/welcome/contacts.html.erb
+++ b/app/views/welcome/contacts.html.erb
@@ -3,160 +3,54 @@
 </div><!---/map-->
 <!-- End Google Map -->
 
-<!--=== Content Part ===-->
 <div class="container">
+  <!--=== Content Part ===-->
   <div class="row-fluid">
     <div class="span9">
-            <div class="headline"><h3>Contacts</h3></div>
-            <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas feugiat. Et harum quidem rerum facilis est et expedita distinctio lorem ipsum dolor sit amet, consectetur adipiscing elit landitiis.</p><br />
+      <div class="headline"><h3>Contacte</h3></div>
+      <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas feugiat. Et harum quidem rerum facilis est et expedita distinctio lorem ipsum dolor sit amet, consectetur adipiscing elit landitiis.</p><br />
       <form>
-                <label>Name</label>
-                <input type="text" class="span7 border-radius-none" />
-                <label>Email <span class="color-red">*</span></label>
-                <input type="text" class="span7 border-radius-none" />
-                <label>Message</label>
-                <textarea rows="8" class="span10"></textarea>
-                <p><button type="submit" class="btn-u">Send Message</button></p>
-            </form>
-        </div><!--/span9-->
+        <label>Nume</label>
+        <input type="text" class="span7 border-radius-none" />
+        <label>Email <span class="color-red">*</span></label>
+        <input type="text" class="span7 border-radius-none" />
+        <label>Mesaj</label>
+        <textarea rows="8" class="span10"></textarea>
+        <p><button type="submit" class="btn-u">Send Message</button></p>
+      </form>
+    </div><!--/span9-->
 
     <div class="span3">
-          <!-- Contacts -->
-            <div class="headline"><h3>Contacts</h3></div>
-            <ul class="unstyled who margin-bottom-20">
-                <li><a href="#"><i class="icon-home"></i>5B Streat, City 50987 New Town US</a></li>
-                <li><a href="#"><i class="icon-envelope-alt"></i>info@example.com</a></li>
-                <li><a href="#"><i class="icon-phone-sign"></i>1(222) 5x86 x97x</a></li>
-                <li><a href="#"><i class="icon-globe"></i>http://www.example.com</a></li>
-            </ul>
+      <!-- Contacts -->
+      <div class="headline"><h3>Contacte</h3></div>
+      <ul class="unstyled who margin-bottom-20">
+        <li><a href="#"><i class="icon-home"></i>Moldova, Ialoveni, strada Iurie Gagarin 1</a></li>
+        <li><a href="#"><i class="icon-envelope-alt"></i><%= mail_to "nccmgrup@gmail.com" %></a></li>
+        <li><a href="#"><i class="icon-phone-sign"></i>73-78-42</a></li>
+        <li><a href="#"><i class="icon-globe"></i>http://nccm.md</a></li>
+      </ul>
 
-          <!-- Business Hours -->
-            <div class="headline"><h3>Business Hours</h3></div>
-            <ul class="unstyled">
-              <li><strong>Monday-Friday:</strong> 10am to 8pm</li>
-              <li><strong>Saturday:</strong> 11am to 3pm</li>
-              <li><strong>Sunday:</strong> Closed</li>
-            </ul>
+      <!-- Business Hours -->
+      <div class="headline"><h3>Orele de lucru</h3></div>
+      <ul class="unstyled">
+        <li><strong>Luni-Vineri:</strong> 8.00 - 18.00</li>
+        <li><strong>Sâmbăta:</strong> 8.00 - 14.00</li>
+        <li><strong>Duminica:</strong>  Închis</li>
+      </ul>
 
-          <!-- Why we are? -->
-            <div class="headline"><h3>Why we are?</h3></div>
-            <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum.</p>
-            <ul class="unstyled">
-              <li><i class="icon-ok color-green"></i> Odio dignissimos ducimus</li>
-              <li><i class="icon-ok color-green"></i> Blanditiis praesentium volup</li>
-              <li><i class="icon-ok color-green"></i> Eos et accusamus</li>
-            </ul>
-        </div><!--/span3-->
-    </div><!--/row-fluid-->
+      <!-- Why we are? -->
+<!--       <div class="headline"><h3>Why we are?</h3></div>
+      <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum.</p>
+      <ul class="unstyled">
+        <li><i class="icon-ok color-green"></i> Odio dignissimos ducimus</li>
+        <li><i class="icon-ok color-green"></i> Blanditiis praesentium volup</li>
+        <li><i class="icon-ok color-green"></i> Eos et accusamus</li>
+      </ul> -->
+    </div><!--/span3-->
+  </div><!--/row-fluid-->
 
-    <!-- Our Clients -->
-    <div id="clients-flexslider" class="flexslider home clients">
-        <div class="headline"><h3>Our Clients</h3></div>
-        <ul class="slides">
-            <li>
-                <a href="#">
-                    <img src="assets/img/clients/hp_grey.png" alt="" />
-                    <img src="assets/img/clients/hp.png" class="color-img" alt="" />
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <img src="assets/img/clients/igneus_grey.png" alt="" />
-                    <img src="assets/img/clients/igneus.png" class="color-img" alt="" />
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <img src="assets/img/clients/vadafone_grey.png" alt="" />
-                    <img src="assets/img/clients/vadafone.png" class="color-img" alt="" />
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <img src="assets/img/clients/walmart_grey.png" alt="" />
-                    <img src="assets/img/clients/walmart.png" class="color-img" alt="" />
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <img src="assets/img/clients/shell_grey.png" alt="" />
-                    <img src="assets/img/clients/shell.png" class="color-img" alt="" />
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <img src="assets/img/clients/natural_grey.png" alt="" />
-                    <img src="assets/img/clients/natural.png" class="color-img" alt="" />
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <img src="assets/img/clients/aztec_grey.png" alt="" />
-                    <img src="assets/img/clients/aztec.png" class="color-img" alt="" />
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <img src="assets/img/clients/gamescast_grey.png" alt="" />
-                    <img src="assets/img/clients/gamescast.png" class="color-img" alt="" />
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <img src="assets/img/clients/cisco_grey.png" alt="" />
-                    <img src="assets/img/clients/cisco.png" class="color-img" alt="" />
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <img src="assets/img/clients/everyday_grey.png" alt="" />
-                    <img src="assets/img/clients/everyday.png" class="color-img" alt="" />
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <img src="assets/img/clients/cocacola_grey.png" alt="" />
-                    <img src="assets/img/clients/cocacola.png" class="color-img" alt="" />
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <img src="assets/img/clients/spinworkx_grey.png" alt="" />
-                    <img src="assets/img/clients/spinworkx.png" class="color-img" alt="" />
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <img src="assets/img/clients/shell_grey.png" alt="" />
-                    <img src="assets/img/clients/shell.png" class="color-img" alt="" />
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <img src="assets/img/clients/natural_grey.png" alt="" />
-                    <img src="assets/img/clients/natural.png" class="color-img" alt="" />
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <img src="assets/img/clients/gamescast_grey.png" alt="" />
-                    <img src="assets/img/clients/gamescast.png" class="color-img" alt="" />
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <img src="assets/img/clients/everyday_grey.png" alt="" />
-                    <img src="assets/img/clients/everyday.png" class="color-img" alt="" />
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <img src="assets/img/clients/spinworkx_grey.png" alt="" />
-                    <img src="assets/img/clients/spinworkx.png" class="color-img" alt="" />
-                </a>
-            </li>
-        </ul>
-    </div><!--/flexslider-->
-    <!-- //End Our Clients -->
-</div><!--/container-->
-<!--=== End Content Part ===-->
+  <!-- Our Clients -->
+  <%= render 'layouts/our_clients' %>
+  <!-- //End Our Clients -->
+  <!--=== End Content Part ===-->
+</div>
