implemented new design for more pages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,10 +52,10 @@
   <div class="container">
     <div class="row-fluid">
       <div class="span8">
-              <p>2013 &copy; Unify. ALL Rights Reserved. <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a></p>
+              <p>2013 &copy; NCCM GRUP. Toate drepturile rezervate. <a href="#">Politica de confidențialitate</a> | <a href="#">Condiții de utilizare</a></p>
       </div>
       <div class="span4">
-        <a href="index.html"><img id="logo-footer" src="assets/img/logo2-default.png" class="pull-right" alt="" /></a>
+        <a href="index.html"><h2><b>NCCM GRUP</b></h2></a>
       </div>
     </div><!--/row-fluid-->
   </div><!--/container-->
