--- a/app/views/welcome/calculator.html.erb
+++ b/app/views/welcome/calculator.html.erb
@@ -18,7 +18,7 @@
   </div>
 
   <div class="calc_container">
-    <%= render 'calc_metalic' %>
+    <%= render 'welcome/calculator/calc_metalic' %>
   </div>
   <br><br><br>
   <div class="panel panel-warning">
