--- a/app/views/welcome/metalic_calc.js.erb
+++ b/app/views/welcome/metalic_calc.js.erb
@@ -1,3 +1,3 @@
-$('.calc_container').html('<%= j(render "calc_metalic") %>');
+$('.calc_container').html('<%= j(render "welcome/calculator/calc_metalic") %>');
 $('.link_to_metalic').html('Țeavă Metal');
 $('.link_to_plastic').html('<%= link_to "Țeavă Polietilenă", plastic_calc_path, remote: true %>');
