--- a/app/assets/stylesheets/welcome.css.scss.erb
+++ b/app/assets/stylesheets/welcome.css.scss.erb
@@ -5,11 +5,11 @@
   width: 103%;
 }
 .metal_diameter_ruler{
-  background: url(<%= asset_path 'ruler_metal.png' %>) no-repeat;
+  background: url(<%= image_path 'ruler_metal.png' %>) no-repeat;
   background-size: 100%;
 }
 .plastic_diameter_ruler{
-  background: url(<%= asset_path 'ruler_plastic.png' %>) no-repeat;
+  background: url(<%= image_path 'ruler_plastic.png' %>) no-repeat;
   background-size: 100%;
 }
 .metal_meters_ruler{
