fixed design issues, added active admin, google analytics code

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -14,7 +14,7 @@
           </a>
           <ul class="dropdown-menu">
             <li><%= link_to "Echipă", team_path %></li>
-            <li><a href="page_services.html">Tehnică</a></li>
+            <li><%= link_to "Tehnică", equipment_path %></li>
             <li><%= link_to "Noutăți", news_path %></li>
             <li><a href="page_coming_soon.html">Documente</a></li>
             <li><%= link_to "Contacte", contacts_path %></li>
