--- a/app/views/welcome/optic_fibers.html.erb
+++ b/app/views/welcome/optic_fibers.html.erb
@@ -1,15 +1,25 @@
+<div class="row-fluid breadcrumbs margin-bottom-20">
+  <div class="container">
+    <h1 class="pull-left">Fibre Optice</h1>
+    <ul class="pull-right breadcrumb">
+      <li><a href="/">Home</a> <span class="divider">/</span></li>
+      <li class="active">Fibre Optice</li>
+    </ul>
+  </div><!--/container-->
+</div>
+<!--=== Content Part ===-->
 <div class="container">
   <div class="row-fluid blog-page blog-item">
     <!-- Left Sidebar -->
     <div class="span9">
       <div class="blog margin-bottom-30">
-        <h3>Pellentesque habitant morbi tristique</h3>
-        <ul class="unstyled inline blog-info">
+        <h3>Волоконно-оптические линии связи</h3>
+<!--         <ul class="unstyled inline blog-info">
           <li><i class="icon-calendar"></i> February 02, 2013</li>
           <li><i class="icon-pencil"></i> Diana Anderson</li>
           <li><i class="icon-comments"></i> <a href="#">24 Comments</a></li>
-        </ul>
-        <ul class="unstyled inline blog-tags">
+        </ul> -->
+<!--         <ul class="unstyled inline blog-tags">
           <li>
             <i class="icon-tags"></i>
             <a href="#">Technology</a>
@@ -17,82 +27,54 @@
             <a href="#">Internet</a>
             <a href="#">Media</a>
           </li>
-        </ul>
-        <div class="blog-img"><img src="assets/img/posts/1.jpg" alt="" /></div>
-        <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut non libero consectetur adipiscing elit magna. Sed et quam lacus. Fusce condimentum eleifend enim a feugiat. Pellentesque viverra vehicula sem ut volutpat. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut non libero magna. Sed et quam lacus. Fusce condimentum eleifend enim a feugiat. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut non libero magna. Sed et quam lacus. Fusce condimentum eleifend enim a feugiat.</p>
+        </ul> -->
+        <div class="blog-img">
+          <!-- <img src="assets/img/posts/1.jpg" alt="" /> -->
+          <center><%= image_tag('drill_tech.jpg') %></center>
+        </div>
+        <div class="cont2">
 
-        <blockquote class="hero">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit posuere erat a ante.</p>
-          <small>Someone famous <cite title="Source Title">Source Title</cite></small>
-        </blockquote>
+          <p style="text-align: justify; line-height: normal; ">Волоконно-оптические линии связи (ВОЛС) являются видом связи, при котором вся информация пересылается по диэлектрическим оптическим волноводам, именуемым как "оптическое волокно". На сегодняшний день данное волокно является наиболее эффективной физической средой для непосредственной передачи данных, а также наиболее развивающейся средой для передачи значительных объемов информации на большие расстояния.</p>
 
-        <p>Accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias feugiat. Pellentesque viverra vehicula sem ut volutpat. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut non libero magna. Sed et quam lacus. Fusce condimentum eleifend enim a feugiat. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut non libero magna. Sed et quam lacus. Fusce condimentum eleifend enim a feugiat.</p>
+          <p style="text-align: justify; line-height: normal; ">Располагая немалым опытом, требуемой технической и материальной базой, а также квалифицированными кадрами мы готовы построить волоконно-оптические линии связи различного назначения (технологические, распределительные, магистральные линии связи) в любом регионе РФ, применяя традиционные и новейшие технологии прокладки кабеля:</p>
+
+          <ol>
+            <li>Строительство кабельной канализации связи с последующей прокладкой кабеля;</li>
+
+            <li>Прокладка кабеля в существующей кабельной канализации связи;</li>
+
+            <li>Строительство лотковой кабельной канализации;</li>
+
+            <li>Прокладка кабеля в грунт в траншее;</li>
+
+            <li>Прокладка кабеля с помощью механизированной колонны (кабелеукладчик);</li>
+
+            <li>Прокладка кабеля бестраншейным способом методом горизонтального направленного бурения (ГНБ);</li>
+
+            <li>Подвес кабеля на опоре (воздушные линии связи).</li>
+          </ol>
+
+          <p style="text-align: justify; line-height: normal; ">В строительстве используется комплексный подход, в связи с этим мы имеем все необходимое, чтобы произвести следующие виды работ:</p>
+
+          <ol>
+            <li>Проверка ВОЛС и измерение технических параметров;</li>
+
+            <li>Входной контроль при прокладке оптического кабеля;</li>
+
+            <li>Установка волоконных и оптических кроссов и муфт;</li>
+
+            <li>Оптическая сварка в оптических кроссах и муфтах;</li>
+
+            <li>Установка кабельных колодцев;</li>
+
+            <li>Система контроля за качеством при строительстве.</li>
+          </ol>
+
+          <p>Строительство линий связи отличается массой сложностей и нюансов. Кроме того, прокладка ВОЛС не возможна без специальной техники и оборудования. В нашей компании для проведения таких работ имеется вся необходимая техника, именно поэтому нам удается сделать все качественно, профессионально и в срок. И если вам требуется строительство ВОЛС, то обязательно доверьте эту работу нашим специалистам, можете быть уверены: вы останетесь довольны результатом.</p>
+        </div>
       </div><!--/blog-->
 
       <hr />
-
-      <!-- Media -->
-      <div class="media">
-        <h3 class="color-green">Comments</h3>
-        <a class="pull-left" href="#">
-          <img class="media-object" src="assets/img/sliders/elastislide/2.jpg" alt="" />
-        </a>
-        <div class="media-body">
-          <h4 class="media-heading">Media heading <span>5 hours ago / <a href="#">Reply</a></span></h4>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-
-          <hr />
-
-          <!-- Nested media object -->
-          <div class="media">
-            <a class="pull-left" href="#">
-              <img class="media-object" src="assets/img/sliders/elastislide/5.jpg" alt="" />
-            </a>
-            <div class="media-body">
-              <h4 class="media-heading">Media heading <span>17 hours ago / <a href="#">Reply</a></span></h4>
-              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-            </div>
-          </div><!--/media-->
-
-          <hr />
-
-          <div class="media">
-            <a class="pull-left" href="#">
-              <img class="media-object" src="assets/img/sliders/elastislide/11.jpg" alt="" />
-            </a>
-            <div class="media-body">
-              <h4 class="media-heading">Media heading <span>2 days ago / <a href="#">Reply</a></span></h4>
-              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-            </div>
-          </div><!--/media-->
-        </div>
-      </div><!--/media-->
-
-      <div class="media">
-        <a class="pull-left" href="#">
-          <img class="media-object" src="assets/img/sliders/elastislide/9.jpg" alt="" />
-        </a>
-        <div class="media-body">
-          <h4 class="media-heading">Media heading <span>July 5,2013 / <a href="#">Reply</a></span></h4>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-        </div>
-      </div><!--/media-->
-
-      <hr />
-
-      <!-- Leave a Comment -->
-      <div class="post-comment">
-        <h3 class="color-green">Leave a Comment</h3>
-        <form>
-          <label>Name</label>
-          <input type="text" class="span7" />
-          <label>Email <span class="color-red">*</span></label>
-          <input type="text" class="span7" />
-          <label>Message</label>
-          <textarea rows="8" class="span10"></textarea>
-          <p><button type="submit" class="btn-u">Send Message</button></p>
-        </form>
-      </div><!--/post-comment-->
     </div><!--/span9-->
 
     <!-- Right Sidebar -->
@@ -111,7 +93,7 @@
       </ul>
 
       <!-- Blog Tags -->
-      <div class="headline"><h3>Blog Tags</h3></div>
+<!--       <div class="headline"><h3>Blog Tags</h3></div>
       <ul class="unstyled inline blog-tags">
         <li><a href="#"><i class="icon-tags"></i> Business</a></li>
         <li><a href="#"><i class="icon-tags"></i> Music</a></li>
@@ -123,17 +105,18 @@
         <li><a href="#"><i class="icon-tags"></i> Electronics</a></li>
         <li><a href="#"><i class="icon-tags"></i> Apple</a></li>
         <li><a href="#"><i class="icon-tags"></i> Canada</a></li>
-      </ul>
+      </ul> -->
 
       <!-- Blog Latest Tweets -->
-      <div class="blog-twitter">
+<!--       <div class="blog-twitter">
         <div class="headline"><h3>Latest Tweets</h3></div>
         <p><a href="">@htmlstream</a> At vero eos et accusamus et iusto odio dignissimos. <a href="#">http://t.co/sBav7dm</a> <span>5 hours ago</span></p>
         <p><a href="">@unify</a> At vero eos et accusamus et iusto odio dignissimos. <a href="#">http://t.co/f58Ddg4</a> <span>8 hours ago</span></p>
         <p><a href="">@veroeos</a> At vero eos et accusamus et iusto odio dignissimos. <a href="#">http://t.co/adVs9f</a> <span>17 hours ago</span></p>
         <p><a href="">@accusamus </a> At vero eos et accusamus et iusto odio dignissimos. <a href="#">http://t.co/wf5Fs6</a> <span>23 hours ago</span></p>
         <p><a href="">@veroeoset</a> At vero eos et accusamus et iusto odio dignissimos. <a href="#">http://t.co/7EsffP</a> <span>1 day ago</span></p>
-      </div>
+      </div> -->
     </div><!--/span3-->
   </div><!--/row-fluid-->
 </div><!--/container-->
+<!--=== End Content Part ===-->
