--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,12 @@
+<div class="row-fluid breadcrumbs margin-bottom-20">
+  <div class="container">
+        <h1 class="pull-left">Noutăți</h1>
+        <ul class="pull-right breadcrumb">
+            <li><a href="/">Home</a> <span class="divider">/</span></li>
+            <li class="active">Noutăți</li>
+        </ul>
+    </div><!--/container-->
+</div>
 <h1>Noutăți</h1>
 <% @posts.each do |post| %>
   <div class="page-header">
