--- a/app/views/welcome/calculator.html.erb
+++ b/app/views/welcome/calculator.html.erb
@@ -2,9 +2,8 @@
   <div class="container">
         <h1 class="pull-left">Calculator</h1>
         <ul class="pull-right breadcrumb">
-            <li><a href="index.html">Home</a> <span class="divider">/</span></li>
-            <li><a href="">Features</a> <span class="divider">/</span></li>
-            <li class="active">Tables</li>
+            <li><a href="/">Home</a> <span class="divider">/</span></li>
+            <li class="active">Calculator</li>
         </ul>
     </div><!--/container-->
 </div>
