--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,7 @@
   <link rel="stylesheet" href="assets/css/style_responsive.css">
   <!-- CSS Implementing Plugins -->
   <link rel="stylesheet" href="assets/plugins/font-awesome/css/font-awesome.css">
-  <link rel="stylesheet" href="assets/plugins/flexslider/flexslider.css" type="text/css" media="screen">
-  <link rel="stylesheet" href="assets/plugins/parallax-slider/css/parallax-slider.css" type="text/css">
+  <%= yield :plugins %>
   <!-- CSS Theme -->
   <link rel="stylesheet" href="assets/css/themes/blue.css" id="style_color">
   <link rel="stylesheet" href="assets/css/themes/headers/header1-blue.css" id="style_color">
