--- a/app/views/welcome/index/_carousel.html.erb
+++ b/app/views/welcome/index/_carousel.html.erb
@@ -1,3 +1,7 @@
+<% content_for :plugins do %>
+<link rel="stylesheet" href="assets/plugins/flexslider/flexslider.css" type="text/css" media="screen">
+<link rel="stylesheet" href="assets/plugins/parallax-slider/css/parallax-slider.css" type="text/css">
+<% end %>
 <div class="slider-inner">
   <div id="da-slider" class="da-slider">
     <div class="da-slide">
