adde client resource

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -14,9 +14,10 @@
           </a>
           <ul class="dropdown-menu">
             <li><%= link_to "Echipă", team_path %></li>
-            <li><%= link_to "Tehnică", equipment_path %></li>
+            <li><%= link_to "Utilaje", equipment_path %></li>
             <li><%= link_to "Noutăți", news_path %></li>
             <li><%= link_to "Documente", docs_path %></li>
+            <li><%= link_to "Parteneri", partners_path %></li>
           </ul>
           <b class="caret-out"></b>
         </li>
