--- a/app/views/layouts/_our_clients.html.erb
+++ b/app/views/layouts/_our_clients.html.erb
@@ -1,107 +1,13 @@
 <div id="clients-flexslider" class="flexslider home clients">
-      <div class="headline"><h3>Clienții noștri</h3></div>
+  <div class="headline"><h3>Clienții noștri</h3></div>
   <ul class="slides">
-    <li>
-              <a href="#">
-                  <img src="assets/img/clients/hp_grey.png" alt="" />
-                  <img src="assets/img/clients/hp.png" class="color-img" alt="" />
-              </a>
-          </li>
-    <li>
-              <a href="#">
-                  <img src="assets/img/clients/igneus_grey.png" alt="" />
-                  <img src="assets/img/clients/igneus.png" class="color-img" alt="" />
-              </a>
-          </li>
-    <li>
-              <a href="#">
-                  <img src="assets/img/clients/vadafone_grey.png" alt="" />
-                  <img src="assets/img/clients/vadafone.png" class="color-img" alt="" />
-              </a>
-          </li>
-    <li>
-              <a href="#">
-                  <img src="assets/img/clients/walmart_grey.png" alt="" />
-                  <img src="assets/img/clients/walmart.png" class="color-img" alt="" />
-              </a>
-          </li>
-    <li>
-              <a href="#">
-                  <img src="assets/img/clients/shell_grey.png" alt="" />
-                  <img src="assets/img/clients/shell.png" class="color-img" alt="" />
-              </a>
-          </li>
-    <li>
-              <a href="#">
-                  <img src="assets/img/clients/natural_grey.png" alt="" />
-                  <img src="assets/img/clients/natural.png" class="color-img" alt="" />
-              </a>
-          </li>
-    <li>
-              <a href="#">
-                  <img src="assets/img/clients/aztec_grey.png" alt="" />
-                  <img src="assets/img/clients/aztec.png" class="color-img" alt="" />
-              </a>
-          </li>
-    <li>
-              <a href="#">
-                  <img src="assets/img/clients/gamescast_grey.png" alt="" />
-                  <img src="assets/img/clients/gamescast.png" class="color-img" alt="" />
-              </a>
-          </li>
-    <li>
-              <a href="#">
-                  <img src="assets/img/clients/cisco_grey.png" alt="" />
-                  <img src="assets/img/clients/cisco.png" class="color-img" alt="" />
-              </a>
-          </li>
-    <li>
-              <a href="#">
-                  <img src="assets/img/clients/everyday_grey.png" alt="" />
-                  <img src="assets/img/clients/everyday.png" class="color-img" alt="" />
-              </a>
-          </li>
-    <li>
-              <a href="#">
-                  <img src="assets/img/clients/cocacola_grey.png" alt="" />
-                  <img src="assets/img/clients/cocacola.png" class="color-img" alt="" />
-              </a>
-          </li>
-    <li>
-              <a href="#">
-                  <img src="assets/img/clients/spinworkx_grey.png" alt="" />
-                  <img src="assets/img/clients/spinworkx.png" class="color-img" alt="" />
-              </a>
-          </li>
-    <li>
-              <a href="#">
-                  <img src="assets/img/clients/shell_grey.png" alt="" />
-                  <img src="assets/img/clients/shell.png" class="color-img" alt="" />
-              </a>
-          </li>
-    <li>
-              <a href="#">
-                  <img src="assets/img/clients/natural_grey.png" alt="" />
-                  <img src="assets/img/clients/natural.png" class="color-img" alt="" />
-              </a>
-          </li>
-    <li>
-              <a href="#">
-                  <img src="assets/img/clients/gamescast_grey.png" alt="" />
-                  <img src="assets/img/clients/gamescast.png" class="color-img" alt="" />
-              </a>
-          </li>
-    <li>
-              <a href="#">
-                  <img src="assets/img/clients/everyday_grey.png" alt="" />
-                  <img src="assets/img/clients/everyday.png" class="color-img" alt="" />
-              </a>
-          </li>
-    <li>
-              <a href="#">
-                  <img src="assets/img/clients/spinworkx_grey.png" alt="" />
-                  <img src="assets/img/clients/spinworkx.png" class="color-img" alt="" />
-              </a>
-          </li>
+    <% Client.all.each do |client| %>
+      <li>
+        <a href="<%= client.url %>">
+          <img src="assets/img/clients/orange_grey.jpg" alt="" />
+          <img src="assets/img/clients/orange.jpg" class="color-img" alt="" />
+        </a>
+      </li>
+    <% end %>
   </ul>
 </div><!--/flexslider-->
