--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,9 @@
+<% content_for :script_init do %>
+App.initSliders();
+Index.initParallaxSlider();
+<% end %>
+
+
 <!--=== Slider ===-->
   <%= render 'welcome/index/carousel' %>
 <!--=== End Slider ===-->
