--- a/app/views/welcome/team.html.erb
+++ b/app/views/welcome/team.html.erb
@@ -1,6 +1,15 @@
-<div class="page-header">
-  <h1>Echipă</h1>
-</div>
+<!--=== Breadcrumbs ===-->
+<div class="breadcrumbs margin-bottom-20">
+  <div class="container">
+        <h1 class="color-green pull-left">Echipă</h1>
+        <ul class="pull-right breadcrumb">
+            <li><a href="index.html">Home</a> <span class="divider">/</span></li>
+            <li class="active">Echipă</li>
+        </ul>
+    </div><!--/container-->
+</div><!--/breadcrumbs-->
+<!--=== End Breadcrumbs ===-->
+
 <!-- START THE FEATURETTES -->
 
 <div class="row featurette">
