--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -65,11 +65,7 @@
 <script type="text/javascript" src="/assets/plugins/flexslider/jquery.flexslider-min.js"></script>
 <script type="text/javascript" src="/assets/plugins/parallax-slider/js/modernizr.js"></script>
 <script type="text/javascript" src="/assets/plugins/parallax-slider/js/jquery.cslider.js"></script>
-<% if @contact_page %>
-<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
-<script type="text/javascript" src="assets/plugins/gmap/gmap.js"></script>
-<script type="text/javascript" src="/assets/js/pages/contact.js"></script>
-<% end %>
+<%= yield :scripts %>
 <script type="text/javascript" src="assets/plugins/back-to-top.js"></script>
 <!-- JS Page Level -->
 <script type="text/javascript" src="/assets/js/app.js"></script>
@@ -78,10 +74,7 @@
     jQuery(document).ready(function() {
         App.init();
         App.initSliders();
-        Index.initParallaxSlider();
-        <% if @contact_page %>
-          Contact.initMap();
-        <% end %>
+        <%= yield :script_init %>
     });
 </script>
 <!--[if lt IE 9]>
