--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,16 +1,80 @@
-<div class="row-fluid breadcrumbs margin-bottom-20">
+<!--=== Breadcrumbs ===-->
+<div class="breadcrumbs margin-bottom-20">
   <div class="container">
-        <h1 class="pull-left">Noutăți</h1>
-        <ul class="pull-right breadcrumb">
-            <li><a href="/">Home</a> <span class="divider">/</span></li>
-            <li class="active">Noutăți</li>
+    <h1 class="color-green pull-left">Ultimele Noutăți</h1>
+    <ul class="pull-right breadcrumb">
+      <li><a href="/">Home</a> <span class="divider">/</span></li>
+      <li class="active">Noutăți</li>
+    </ul>
+  </div><!--/container-->
+</div><!--/breadcrumbs-->
+<!--=== End Breadcrumbs ===-->
+
+<!--=== Content Part ===-->
+<div class="container">
+  <div class="row-fluid blog-page">
+    <!-- Left Sidebar -->
+    <div class="span9">
+      <% @posts.each do |post| %>
+      <div class="blog margin-bottom-30">
+        <h3><%= post.title %></h3>
+        <ul class="unstyled inline blog-info">
+          <li><i class="icon-calendar"></i> <%= l post.created_at, format: :long %></li>
+<!--           <li><i class="icon-pencil"></i> Kate Dommy</li>
+  <li><i class="icon-comments"></i> <a href="#">64 Comments</a></li> -->
+</ul>
+<!--         <ul class="unstyled inline blog-tags">
+          <li>
+            <i class="icon-tags"></i>
+            <a href="#">Technology</a>
+            <a href="#">Education</a>
+            <a href="#">Internet</a>
+            <a href="#">Music</a>
+            <a href="#">Films</a>
+            <a href="#">Business</a>
+          </li> -->
         </ul>
-    </div><!--/container-->
-</div>
-<h1>Noutăți</h1>
-<% @posts.each do |post| %>
-  <div class="page-header">
-    <h3><%= link_to post.title, post_path(post) %></h3>
+        <div class="blog-img"><img src="assets/img/posts/3.jpg" alt="" /></div>
+        <p><%= post.content %></p>
+        <p><a class="btn-u btn-u-small" href="blog_item.html">Deschide</a></p>
+      </div><!--/blog-->
+      <% end %>
+
+      <div class="pagination pagination-centered">
+        <%= paginate @posts %>
+      </div>
+    </div><!--/span9-->
+
+    <!-- Right Sidebar -->
+    <div class="span3">
+      <!-- Our Services -->
+      <div class="who margin-bottom-30">
+        <div class="headline"><h3>Serviciile noastre</h3></div>
+        <p>At vero eos et accusamus et iusto odio dign issimos ducimus qui blanditiis iusto.</p>
+        <ul class="unstyled">
+          <li><a href="#"><i class="icon-chevron-sign-right"></i>Vivamus imperdiet condimentum</a></li>
+          <li><a href="#"><i class="icon-chevron-sign-right"></i>Anim pariatur cliche squid</a></li>
+          <li><a href="#"><i class="icon-chevron-sign-right"></i>Eget placerat felis consectetur</a></li>
+          <li><a href="#"><i class="icon-chevron-sign-right"></i>Condimentum diam eget placerat</a></li>
+        </ul>
+      </div>
+
+      <!-- About Us -->
+<!--       <div class="headline"><h3>About Us</h3></div>
+  <p class="margin-bottom-30">At vero eos et acc usamus et iusto odio dign issimos ducimus atque corrupti quos dolores etrerum facilis est etenim a feugiat cupiditate non quos. <a class="read-more" href="#">Read more</a></p> -->
+
+  <!-- Contact Us -->
+  <div class="who margin-bottom-30">
+    <div class="headline"><h3>Contacte</h3></div>
+    <p>Vero facilis est etenim a feugiat cupiditate non quos etrerum facilis.</p>
+    <ul class="unstyled">
+      <li><a href="#"><i class="icon-home"></i>Moldova, Ialoveni, strada Iurie Gagarin 1</a></li>
+      <li><a href="#"><i class="icon-envelope-alt"></i><%= mail_to "nccmgrup@gmail.com" %></a></li>
+      <li><a href="#"><i class="icon-phone-sign"></i>(373) 22 73-78-42</a></li>
+      <li><a href="http://www.nccm.md"><i class="icon-globe"></i>http://www.nccm.md</a></li>
+    </ul>
   </div>
-  <p><%= sanitize truncate(post.content, omision: "...", length: 700), :tags => %w(h) %></p>
-<% end %>
+</div><!--/span3-->
+</div><!--/row-fluid-->
+</div><!--/container-->
+<!--=== End Content Part ===-->
