--- a/app/views/welcome/contacts.html.erb
+++ b/app/views/welcome/contacts.html.erb
@@ -1,3 +1,21 @@
+<% content_for :scripts do %>
+<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
+<script type="text/javascript" src="assets/plugins/gmap/gmap.js"></script>
+<script type="text/javascript" src="/assets/js/pages/contact.js"></script>
+<% end %>
+<% content_for :script_init do %>
+Contact.initMap();
+<% end %>
+
+<div class="row-fluid breadcrumbs margin-bottom-20">
+  <div class="container">
+    <h1 class="pull-left">Contacte</h1>
+    <ul class="pull-right breadcrumb">
+      <li><a href="/">Home</a> <span class="divider">/</span></li>
+      <li class="active">Contacte</li>
+    </ul>
+  </div><!--/container-->
+</div>
 <!-- Google Map -->
 <div id="map" class="map margin-bottom-40">
 </div><!---/map-->
@@ -7,7 +25,7 @@
   <!--=== Content Part ===-->
   <div class="row-fluid">
     <div class="span9">
-      <div class="headline"><h3>Contacte</h3></div>
+      <div class="headline"><h3>Lăsați un mesaj</h3></div>
       <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas feugiat. Et harum quidem rerum facilis est et expedita distinctio lorem ipsum dolor sit amet, consectetur adipiscing elit landitiis.</p><br />
       <form>
         <label>Nume</label>
@@ -16,7 +34,7 @@
         <input type="text" class="span7 border-radius-none" />
         <label>Mesaj</label>
         <textarea rows="8" class="span10"></textarea>
-        <p><button type="submit" class="btn-u">Send Message</button></p>
+        <p><button type="submit" class="btn-u">Trimite mesaj</button></p>
       </form>
     </div><!--/span9-->
 
@@ -26,8 +44,8 @@
       <ul class="unstyled who margin-bottom-20">
         <li><a href="#"><i class="icon-home"></i>Moldova, Ialoveni, strada Iurie Gagarin 1</a></li>
         <li><a href="#"><i class="icon-envelope-alt"></i><%= mail_to "nccmgrup@gmail.com" %></a></li>
-        <li><a href="#"><i class="icon-phone-sign"></i>73-78-42</a></li>
-        <li><a href="#"><i class="icon-globe"></i>http://nccm.md</a></li>
+        <li><a href="#"><i class="icon-phone-sign"></i>(373) 22 73-78-42</a></li>
+        <li><a href="http://www.nccm.md"><i class="icon-globe"></i>http://www.nccm.md</a></li>
       </ul>
 
       <!-- Business Hours -->
